--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Transaction Manager</string>
+
+    <string name="new_transaction">New Transaction</string>
+    <string name="transaction_activity_from">From</string>
 </resources>
