Finished from and to

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,9 @@
     <string name="app_name">Transaction Manager</string>
 
     <string name="new_transaction">New Transaction</string>
+
+
     <string name="transaction_activity_from">From</string>
+    <string name="transaction_activity_btn_choose">Choose</string>
+    <string name="transaction_activity_to">To</string>
 </resources>
